Refina layout da auditoria com visão compacta e preview lateral

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <title>Protótipo de Auditoria de Documentos</title>
   <style>
     :root {
-      --bg: #f4f6f8;
+      --bg: #f3f5f8;
       --panel: #ffffff;
       --text: #1f2937;
-      --muted: #6b7280;
+      --muted: #667085;
       --primary: #1f4f8f;
-      --primary-soft: #e8f0fb;
-      --border: #e5e7eb;
-      --ok: #0f766e;
-      --warn: #a16207;
-      --danger: #b91c1c;
-      --shadow: 0 10px 25px rgba(15, 23, 42, 0.06);
+      --primary-soft: #e9f0ff;
+      --border: #e4e7ec;
+      --chip-bg: #eef2ff;
+      --chip-text: #3730a3;
+      --shadow: 0 8px 22px rgba(15, 23, 42, 0.05);
       --radius: 12px;
     }
     * { box-sizing: border-box; }
@@ -26,12 +25,15 @@
       color: var(--text);
       background: var(--bg);
     }
+    h1,h2,h3,h4,p { margin: 0; }
+    .muted { color: var(--muted); }
+
     .app {
       display: grid;
-      grid-template-columns: 360px 1fr;
+      grid-template-columns: 360px minmax(0, 1fr);
+      gap: 14px;
       min-height: 100vh;
-      gap: 16px;
-      padding: 16px;
+      padding: 14px;
     }
     .panel {
       background: var(--panel);
@@ -39,184 +41,246 @@
       border-radius: var(--radius);
       box-shadow: var(--shadow);
     }
+
     .left {
-      padding: 18px;
+      padding: 14px;
       display: flex;
       flex-direction: column;
-      gap: 14px;
+      gap: 10px;
+      min-height: calc(100vh - 28px);
     }
     .right {
-      padding: 18px;
+      padding: 14px;
       overflow: auto;
+      min-height: calc(100vh - 28px);
     }
-    h1,h2,h3 { margin: 0; }
-    h1 { font-size: 1.2rem; }
-    h2 { font-size: 1rem; margin-bottom: 8px; }
-    h3 { font-size: 0.92rem; margin-bottom: 8px; }
-    .muted { color: var(--muted); }
+
+    .title-block h1 { font-size: 1.08rem; }
+    .title-block .muted { font-size: 0.84rem; margin-top: 2px; }
+
+    .stack { display: flex; flex-direction: column; gap: 6px; }
+    .row { display: flex; gap: 8px; align-items: center; }
+
+    label { font-size: 0.82rem; color: var(--muted); }
     .input, select, button {
       border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 10px 12px;
-      font-size: 0.9rem;
+      border-radius: 9px;
+      padding: 8px 10px;
+      font-size: 0.85rem;
       background: #fff;
       color: var(--text);
     }
     .input, select { width: 100%; }
     button {
       cursor: pointer;
-      transition: .2s ease;
       font-weight: 600;
+      transition: 0.2s ease;
     }
     button.primary {
       background: var(--primary);
-      color: #fff;
       border-color: var(--primary);
+      color: #fff;
     }
-    button.primary:hover { filter: brightness(1.05); }
+    button.primary:hover { filter: brightness(1.04); }
     button.ghost:hover { background: #f8fafc; }
-    .row { display: flex; gap: 8px; }
-    .stack { display: flex; flex-direction: column; gap: 8px; }
 
     .list {
       border: 1px solid var(--border);
       border-radius: 10px;
-      max-height: 180px;
+      max-height: 132px;
       overflow: auto;
+      background: #fff;
     }
     .list-item {
-      padding: 10px 12px;
+      padding: 8px 10px;
       border-bottom: 1px solid var(--border);
       cursor: pointer;
+      font-size: 0.84rem;
     }
     .list-item:last-child { border-bottom: none; }
     .list-item:hover { background: #f8fafc; }
     .list-item.active {
       background: var(--primary-soft);
       border-left: 3px solid var(--primary);
-      padding-left: 9px;
+      padding-left: 7px;
     }
+
     .chip {
-      display: inline-block;
-      padding: 4px 8px;
-      font-size: .75rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 5px;
+      padding: 3px 8px;
       border-radius: 999px;
-      background: #eef2ff;
-      color: #3730a3;
+      font-size: 0.75rem;
+      background: var(--chip-bg);
+      color: var(--chip-text);
+      white-space: nowrap;
+    }
+    .chip .value {
+      background: rgba(31, 79, 143, 0.12);
+      border-radius: 999px;
+      padding: 1px 6px;
+      font-weight: 700;
+      color: var(--primary);
+    }
+    .chip-wrap {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin: 10px 0 12px;
+    }
+
+    .preview-panel {
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      flex: 1;
+      min-height: 280px;
+    }
+    .preview-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+    }
+    .preview-head h3 { font-size: 0.88rem; }
+    .preview-meta { font-size: 0.76rem; color: var(--muted); }
+    .doc-html {
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 10px;
+      overflow: auto;
+      background: #fcfcfd;
+      font-size: 0.85rem;
+      line-height: 1.35;
+      height: 100%;
+      min-height: 160px;
     }
 
     .topbar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 14px;
       gap: 10px;
       flex-wrap: wrap;
+      margin-bottom: 8px;
     }
-    .cards {
+    .topbar h2 { font-size: 1rem; }
+    .topbar .muted { font-size: 0.82rem; }
+
+    .grid {
       display: grid;
-      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1fr);
       gap: 10px;
-      margin-bottom: 14px;
     }
-    .card {
+    .section {
       border: 1px solid var(--border);
       border-radius: 10px;
       padding: 10px;
       background: #fff;
+      min-height: 0;
     }
-    .card .label { font-size: .78rem; color: var(--muted); }
-    .card .value { font-size: 1.08rem; font-weight: 700; margin-top: 2px; }
+    .section h3 { font-size: 0.88rem; margin-bottom: 8px; }
 
-    .grid {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 14px;
+    .timeline-shell {
+      max-height: 270px;
+      overflow: auto;
+      padding-right: 4px;
     }
-    .section {
+    .timeline {
+      border-left: 2px solid #dbeafe;
+      margin-left: 8px;
+      padding-left: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .timeline-item { position: relative; padding: 1px 0 3px; }
+    .timeline-item::before {
+      content: "";
+      position: absolute;
+      left: -17px;
+      top: 5px;
+      width: 9px;
+      height: 9px;
+      border-radius: 50%;
+      background: var(--primary);
+    }
+    .timeline-action { font-size: 0.84rem; font-weight: 600; }
+    .timeline-item .muted { font-size: 0.75rem; }
+    .timeline-item button {
+      margin-top: 4px;
+      font-size: 0.74rem;
+      padding: 4px 7px;
+    }
+
+    .table-wrap {
+      max-height: 205px;
+      overflow: auto;
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 12px;
-      background: #fff;
+      border-radius: 9px;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      font-size: .85rem;
+      font-size: 0.8rem;
+      background: #fff;
     }
     th, td {
       border-bottom: 1px solid var(--border);
-      padding: 8px;
+      padding: 7px;
       text-align: left;
       vertical-align: top;
+      white-space: nowrap;
     }
-    th { color: var(--muted); font-weight: 600; }
+    td:last-child { white-space: normal; }
+    th {
+      color: var(--muted);
+      font-weight: 600;
+      position: sticky;
+      top: 0;
+      background: #fff;
+    }
     tr:last-child td { border-bottom: none; }
 
-    .timeline {
-      border-left: 2px solid #dbeafe;
-      margin-left: 10px;
-      padding-left: 12px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .timeline-item { position: relative; }
-    .timeline-item::before {
-      content: "";
-      position: absolute;
-      left: -19px;
-      top: 6px;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: var(--primary);
-    }
-    .timeline-action { font-weight: 600; }
-    .timeline-item button {
-      margin-top: 6px;
-      font-size: .78rem;
-      padding: 6px 8px;
-    }
-
-    .doc-html {
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 12px;
-      max-height: 260px;
-      overflow: auto;
-      background: #fcfcfd;
-    }
+    .full-width { grid-column: 1 / -1; }
     .compare-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 10px;
+      gap: 8px;
+      margin-top: 8px;
     }
     .diff-box {
       border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 10px;
-      min-height: 120px;
-      background: #fff;
+      border-radius: 9px;
+      padding: 8px;
+      min-height: 110px;
+      max-height: 200px;
       overflow: auto;
+      font-size: 0.82rem;
     }
+    .legend { font-size: .78rem; color: var(--muted); }
     .ins { background: #dcfce7; color: #065f46; padding: 1px 3px; border-radius: 4px; }
     .del { background: #fee2e2; color: #7f1d1d; text-decoration: line-through; padding: 1px 3px; border-radius: 4px; }
 
-    .legend { font-size: .8rem; color: var(--muted); }
     @media (max-width: 1160px) {
       .app { grid-template-columns: 1fr; }
-      .cards { grid-template-columns: repeat(2, minmax(0, 1fr)); }
+      .left, .right { min-height: auto; }
+      .preview-panel { min-height: 220px; }
       .grid { grid-template-columns: 1fr; }
+      .full-width { grid-column: auto; }
     }
   </style>
 </head>
 <body>
 <div class="app">
   <aside class="panel left">
-    <div>
+    <div class="title-block">
       <h1>Auditoria de Documentos</h1>
-      <div class="muted">Protótipo com dados mockados</div>
+      <div class="muted">Visão compacta com foco em histórico e versões</div>
     </div>
 
     <div class="stack">
@@ -244,6 +308,15 @@
       <h3>Documentos do processo</h3>
       <div id="documentList" class="list"></div>
     </div>
+
+    <section class="preview-panel">
+      <div class="preview-head">
+        <h3>Última versão do documento</h3>
+        <span id="leftPreviewVersion" class="chip">sem versão</span>
+      </div>
+      <div id="leftPreviewMeta" class="preview-meta">Selecione um documento para visualizar o conteúdo.</div>
+      <div id="leftDocPreview" class="doc-html"></div>
+    </section>
   </aside>
 
   <main class="panel right">
@@ -255,62 +328,61 @@
       <button id="exportBtn" class="ghost">Exportar auditoria (.md)</button>
     </div>
 
-    <div id="stats" class="cards"></div>
+    <div id="stats" class="chip-wrap"></div>
 
     <div class="grid">
       <section class="section">
         <h3>Timeline de situações do documento</h3>
-        <div id="timeline" class="timeline"></div>
+        <div class="timeline-shell">
+          <div id="timeline" class="timeline"></div>
+        </div>
       </section>
 
       <section class="section">
         <h3>Permissões atuais</h3>
-        <table>
-          <thead>
-            <tr><th>Usuário</th><th>Perfil</th><th>Permissões</th></tr>
-          </thead>
-          <tbody id="permissionsTable"></tbody>
-        </table>
+        <div class="table-wrap">
+          <table>
+            <thead>
+              <tr><th>Usuário</th><th>Perfil</th><th>Permissões</th></tr>
+            </thead>
+            <tbody id="permissionsTable"></tbody>
+          </table>
+        </div>
       </section>
 
       <section class="section">
         <h3>Histórico de concessões/revogações</h3>
-        <table>
-          <thead>
-            <tr><th>Data</th><th>Responsável</th><th>Usuário alvo</th><th>Ação</th><th>Permissão</th></tr>
-          </thead>
-          <tbody id="grantHistoryTable"></tbody>
-        </table>
+        <div class="table-wrap">
+          <table>
+            <thead>
+              <tr><th>Data</th><th>Responsável</th><th>Usuário alvo</th><th>Ação</th><th>Permissão</th></tr>
+            </thead>
+            <tbody id="grantHistoryTable"></tbody>
+          </table>
+        </div>
       </section>
 
       <section class="section">
         <h3>Logs de acesso (fora da timeline)</h3>
-        <table>
-          <thead>
-            <tr><th>Data</th><th>Usuário</th><th>Evento</th><th>Detalhe</th></tr>
-          </thead>
-          <tbody id="accessLogsTable"></tbody>
-        </table>
-      </section>
-
-      <section class="section" style="grid-column: 1 / -1;">
-        <h3>Conteúdo da versão selecionada</h3>
-        <div class="row" style="margin-bottom: 8px;">
-          <select id="versionSelect" style="max-width: 300px;"></select>
-          <button id="loadVersionBtn" class="ghost">Carregar versão</button>
+        <div class="table-wrap">
+          <table>
+            <thead>
+              <tr><th>Data</th><th>Usuário</th><th>Evento</th><th>Detalhe</th></tr>
+            </thead>
+            <tbody id="accessLogsTable"></tbody>
+          </table>
         </div>
-        <div id="docHtml" class="doc-html"></div>
       </section>
 
-      <section class="section" style="grid-column: 1 / -1;">
+      <section class="section full-width">
         <h3>Comparação entre duas versões</h3>
-        <div class="row" style="margin-bottom: 8px;">
+        <div class="row" style="margin-bottom: 8px; flex-wrap: wrap;">
           <select id="compareA"></select>
           <select id="compareB"></select>
           <button id="compareBtn" class="primary">Comparar versões</button>
         </div>
         <div class="legend">Legenda: <span class="ins">inserido</span> <span class="del">removido</span></div>
-        <div class="compare-grid" style="margin-top: 8px;">
+        <div class="compare-grid">
           <div class="diff-box" id="compareLeft"></div>
           <div class="diff-box" id="compareRight"></div>
         </div>
@@ -412,8 +484,12 @@ function buildDoc(id, type, title, author) {
 const processList = document.getElementById("processList");
 const documentList = document.getElementById("documentList");
 const docTypeFilter = document.getElementById("docTypeFilter");
+const leftPreviewVersion = document.getElementById("leftPreviewVersion");
+const leftPreviewMeta = document.getElementById("leftPreviewMeta");
+const leftDocPreview = document.getElementById("leftDocPreview");
 let selectedProcess = null;
 let selectedDocument = null;
+let selectedVersionId = null;
 
 function renderProcesses(filtered = data.processes) {
   processList.innerHTML = "";
@@ -424,9 +500,11 @@ function renderProcesses(filtered = data.processes) {
     item.onclick = () => {
       selectedProcess = p;
       selectedDocument = null;
+      selectedVersionId = null;
       renderProcesses(filtered);
       renderDocuments();
       clearRight();
+      clearPreview();
     };
     processList.appendChild(item);
   });
@@ -444,6 +522,7 @@ function renderDocuments() {
     item.innerHTML = `<strong>${d.title}</strong><br><span class="chip">${d.type}</span>`;
     item.onclick = () => {
       selectedDocument = d;
+      selectedVersionId = null;
       renderDocuments();
       renderRight();
     };
@@ -452,14 +531,19 @@ function renderDocuments() {
   if (!docs.length) documentList.innerHTML = `<div class="list-item muted">Sem documentos para o filtro selecionado.</div>`;
 }
 
+function clearPreview() {
+  leftPreviewVersion.textContent = "sem versão";
+  leftPreviewMeta.textContent = "Selecione um documento para visualizar o conteúdo.";
+  leftDocPreview.innerHTML = "";
+}
+
 function clearRight() {
   document.getElementById("headerTitle").textContent = "Selecione um processo e documento";
   document.getElementById("headerSub").textContent = "Acompanhe timeline, permissões, acessos e versões";
-  ["stats","timeline","permissionsTable","grantHistoryTable","accessLogsTable","versionSelect","compareA","compareB","docHtml","compareLeft","compareRight"].forEach(id => {
+  ["stats","timeline","permissionsTable","grantHistoryTable","accessLogsTable","compareA","compareB","compareLeft","compareRight"].forEach(id => {
     const el = document.getElementById(id);
     if (!el) return;
-    if (["versionSelect","compareA","compareB"].includes(id)) el.innerHTML = "";
-    else el.innerHTML = "";
+    el.innerHTML = "";
   });
 }
 
@@ -470,10 +554,10 @@ function renderRight() {
   document.getElementById("headerSub").textContent = `${d.type} | Autor principal: ${d.author}`;
 
   document.getElementById("stats").innerHTML = `
-    <div class="card"><div class="label">Situações registradas</div><div class="value">${d.situations.length}</div></div>
-    <div class="card"><div class="label">Versões armazenadas</div><div class="value">${d.versions.length}</div></div>
-    <div class="card"><div class="label">Permissões ativas</div><div class="value">${d.currentPermissions.length}</div></div>
-    <div class="card"><div class="label">Logs de acesso</div><div class="value">${d.accessLogs.length}</div></div>
+    <span class="chip">Situações registradas <span class="value">${d.situations.length}</span></span>
+    <span class="chip">Versões armazenadas <span class="value">${d.versions.length}</span></span>
+    <span class="chip">Permissões ativas <span class="value">${d.currentPermissions.length}</span></span>
+    <span class="chip">Logs de acesso <span class="value">${d.accessLogs.length}</span></span>
   `;
 
   const timeline = document.getElementById("timeline");
@@ -505,7 +589,6 @@ function renderRight() {
   `).join("");
 
   const options = d.versions.map(v => `<option value="${v.id}">${v.id} • ${v.date} • ${v.user}</option>`).join("");
-  document.getElementById("versionSelect").innerHTML = options;
   document.getElementById("compareA").innerHTML = options;
   document.getElementById("compareB").innerHTML = options;
 
@@ -516,8 +599,10 @@ function loadVersionById(versionId) {
   if (!selectedDocument) return;
   const version = selectedDocument.versions.find(v => v.id === versionId);
   if (!version) return;
-  document.getElementById("versionSelect").value = versionId;
-  document.getElementById("docHtml").innerHTML = version.html;
+  selectedVersionId = versionId;
+  leftPreviewVersion.textContent = version.id;
+  leftPreviewMeta.textContent = `${version.date} • ${version.user}`;
+  leftDocPreview.innerHTML = version.html;
 }
 
 function stripHTML(html) {
@@ -618,16 +703,18 @@ document.getElementById("searchBtn").onclick = () => {
   const filtered = data.processes.filter(p => p.number.includes(query));
   selectedProcess = filtered[0] || null;
   selectedDocument = null;
+  selectedVersionId = null;
   renderProcesses(filtered);
   renderDocuments();
   clearRight();
+  clearPreview();
 };
 
 docTypeFilter.onchange = renderDocuments;
-document.getElementById("loadVersionBtn").onclick = () => loadVersionById(document.getElementById("versionSelect").value);
 document.getElementById("compareBtn").onclick = compareSelected;
 document.getElementById("exportBtn").onclick = exportAudit;
 
+clearPreview();
 renderProcesses();
 </script>
 </body>
